htaccess rule to forbid access to the .git directory (not that there's anything useful in there for a static site

--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,5 @@ RewriteRule .* - [L]
 RewriteCond	%{DOCUMENT_ROOT}/$1  !-f
 # RewriteCond	%{DOCUMENT_ROOT}/$1  !-d
 RewriteRule	^\.?(.*)$ /index.html [L]
+
+RedirectMatch 403 ^/.git/?(.*)?$
